--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "mssql": "^11.0.1",
+    "nodemailer": "^7.0.5",
     "pdfkit": "^0.17.1"
   }
 }
